--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "mongoose": "^6.3.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-autogen": "^2.5.10",
+    "swagger-ui-express": "^4.3.0"
   },
   "main": "app.js",
   "keywords": [],
