--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.16",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.3.0",
     "validator": "^13.7.0"
