--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "start:dev": "NODE_ENV=dev nodemon ./bin/www",
-    "start:production": "NODE_ENV=production nodemon ./bin/www"
+    "dev": "NODE_ENV=dev nodemon ./bin/www",
+    "prod": "NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
