1. finish demo passport-google-oauth2-fetch

--- a/example.env
+++ b/example.env
@@ -1,5 +1,10 @@
 PORT=
 DATABASE=
+DATABASE_PASSWORD
+SESSIONSECRET=
 GOOGLE_ID=
 GOOGLE_SECRET=
 GOOGLE_CALLBACK=
+JWT_SECRET=
+JWT_EXPIRES=
+FRONTEND_REDIRECT_URL=
