--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "NODE_ENV=dev nodemon ./bin/www",
-    "prod": "NODE_ENV=production nodemon ./bin/www"
+    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www",
+    "prod": "cross-env NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
@@ -18,10 +19,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.16",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oidc": "^0.1.0",
-    "nodemon": "^2.0.16",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.3.0",
     "validator": "^13.7.0"
