--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "image-size": "^1.0.1",
+    "imgur": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oidc": "^0.1.0",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.3.0",
+    "tslib": "^2.4.0",
     "validator": "^13.7.0"
   },
   "main": "app.js",
