--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "eslint": "^8.16.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint": "^8.16.0"
   }
 }
