--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "file-stream-rotator": "^0.6.1",
     "image-size": "^1.0.1",
     "imgur": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
