--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "posts-final",
-  "version": "0.0.0",
+  "version": ".0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
