--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
