feat: 添加藍新金流需要的環境變量

--- a/example.env
+++ b/example.env
@@ -29,3 +29,11 @@ MAILER_CLIENTID=
 MAILER_CLIENT_SECRET=
 MAILER_REFRESH_TOKEN=
 MAILER_ACCESS_TOKEN=
+
+HashKey=
+HashIV=
+Version=
+MerchantID=
+ReturnURL=
+NotifyURL=
+RespondType=
