--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "file-stream-rotator": "^0.6.1",
