--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oidc": "^0.1.0",
+    "socket.io": "^4.5.3",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.3.0",
     "tslib": "^2.4.0",
