--- a/example.env
+++ b/example.env
@@ -25,10 +25,7 @@ GOOGLE_CALLBACK=
 
 # Nodemailer
 MAILER_USER=
-MAILER_CLIENTID=
-MAILER_CLIENT_SECRET=
-MAILER_REFRESH_TOKEN=
-MAILER_ACCESS_TOKEN=
+MAILER_SECRET=
 
 #藍新金流
 HashKey=
