--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "nodemailer": "^6.7.6",
     "nodemon": "^2.0.16",
     "passport": "^0.5.3",
+    "passport-discord": "^0.1.4",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oidc": "^0.1.0",
+    "passport-line": "0.0.4",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.3.0",
     "tslib": "^2.4.0",
