fix: [藍新金流]→修正無法正確訪問到藍新金流頁面問題
因 doppler 的環境變量都是大寫
而本地設定的藍新金流變量都用大小寫
導致正式環境抓不到

所以全部統一用大寫

--- a/example.env
+++ b/example.env
@@ -28,10 +28,10 @@ MAILER_USER=
 MAILER_SECRET=
 
 #藍新金流
-HashKey=
-HashIV=
-Version=
-MerchantID=
-ReturnURL=
-NotifyURL=
-RespondType=
+HASHKEY=
+HASHIV=
+VERSION=
+MERCHANTID=
+RETURNURL=
+NOTIFYURL=
+RESPONDTYPE=
